<resources>
    <string name="app_name">Baking</string>

    <string name="servings_header">Servings:</string>

    <string name="ingredient_format">%s %s - %s </string>
    <string name="ingredient_format_no_unit">%s %s</string>

    <string name="steps_format_short">%d. %s</string>

    <string name="ingredients_header">Ingredients: </string>
    <string name="steps_header">Steps: </string>

    <string name="view_pager_previous">Previous</string>
    <string name="view_pager_next">Next</string>
    <string name="view_pager_intro">Introduction.</string>
    <string name="view_pager_page">%d.</string>

    <string name="description_fallback_intro">Recipe Introduction</string>

    <string name="volume_on_a11y">Volume on.</string>
    <string name="volume_off_a11y">Volume off.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="prev_recipe_a11y">Previous Recipe</string>
    <string name="next_recipe_a11y">Next Recipe</string>
    <string name="app_logo_general">App logo</string>
    <string name="app_logo_text">Baking!</string>
    <string name="empty_grid_view">Empty GridView</string>

</resources>
